--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2iXNYijv6Q27ZLq5lnv0XwLIz1IzH4s"></script>
     <script src="./src/index.ts"></script>
 </body>
 </html>
